# ConstantiamCatFacts

./: .env.example  .gitignore  Caddyfile  README.md  deploy.ps1  docker-compose.yml  gradle.properties
data/: click.opus  meow.opus
gradle/: libs.versions.toml
python/: Dockerfile  bot.py  db.py  requirements.txt  web.py
rust_bot/: .dockerignore  Cargo.toml  Dockerfile
rust_bot/src/: main.rs
src/main/java/cc/catfacts/catfactsaddon/: CatFactsAddon.java
src/main/java/cc/catfacts/catfactsaddon/commands/: CatFactsCommand.java
src/main/java/cc/catfacts/catfactsaddon/hud/: CatFactsHud.java
src/main/java/cc/catfacts/catfactsaddon/modules/: CatFactsModule.java
src/main/resources/: catfactsaddon.mixins.json  fabric.mod.json
