[package]
name = "cat_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
azalea = "0.11.0+mc1.21.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15"
rand = "0.8"

[patch.crates-io]
home = { vendor = true, version = "=0.5.9" }
socks5-impl = { vendor = true, version = "=0.6.1" }