[package]
name = "cat_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
azalea = "0.11.0+mc1.21.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15"
rand = "0.8"

home = "=0.5.9"
socks5-impl = "=0.6.1"
base64ct = "=1.6.0"
simd_cesu8 = "=1.0.1"